# resembl

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  ideas.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  coverage.yml  tests.yml
docs/: api_reference.md  custom_database.md  flowcharts.md  man.md  tutorial.md  user_stories.md
docs/adr/: 001-minhash-over-simhash.md  002-sqlite-primary-store.md  003-checksum-as-pk.md
fuzzers/: fuzz_code_create_minhash.py  fuzz_code_tokenize.py  fuzz_string_checksum.py  fuzz_string_normalize.py
resembl/: __init__.py  __main__.py  cache.py  cli.py  config.py  core.py  database.py  models.py
tests/: benchmark.py  test_asmatch.py  test_bench.py  test_cache.py  test_cli.py  test_cli_extended.py  test_collections_merge.py  test_config.py  test_core_algorithms.py  test_coverage_full.py  test_main.py  test_no_color.py  test_property.py  test_tags.py  test_yara.py  utils.py
