[project]
name = "resembl"
version = "0.1.0"
description = "Assembly Code Similarity Search (resembl)"
authors = [{ name = "N/A" }]
license = { text = "GPLv3" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlmodel>=0.0.24",
    "pygments>=2.19.2",
    "datasketch>=1.6.5",
    "rapidfuzz>=3.13.0",
    "rich>=13.0.0",
    "tomli>=2.2.1",
    "tomli_w>=1.2.0",
    "typer>=0.9.0",
]

[project.urls]
homepage = "https://github.com/maci0/resembl"
repository = "https://github.com/maci0/resembl"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "mypy>=1.16.1",
    "ruff>=0.12.2",
    "black>=25.1.0",
    "unittest-xml-reporting>=3.2.0",
    "pre-commit>=4.2.0",
    "pylint>=3.3.7",
    "pytest-cov>=6.2.1",
]

[project.scripts]
resembl = "resembl.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 120

[tool.pylint.format]
max-line-length = 120

[tool.ruff.lint]
# Enable the isort rules.
select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["resembl"]

[tool.pyright]
include = ["resembl", "tests"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
